fixed overflow issues

--- a/src/components/About/Images/index.scss
+++ b/src/components/About/Images/index.scss
@@ -1,4 +1,8 @@
+.container {
+    overflow: hidden;
+}
 .pictures {
+    overflow: hidden;
     width: 450px;
     height: 100%;
     position: relative;
