--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,4 +1,5 @@
 .about-page {
+    overflow: hidden;
     .text-zone {
         position: absolute;
         left: 18%;
