--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -1,4 +1,5 @@
 .projects-page {
+    overflow: scroll;
     .projects-zone {
         position: absolute;
         transform: translateY(-50);
